Fix redundant history in turkish translation

--- a/po/tr.po
+++ b/po/tr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-02 17:46+0200\n"
 "PO-Revision-Date: 2023-10-03 10:53+0000\n"
-"Last-Translator: Anonymous <noreply@weblate.org>\n"
+"Last-Translator: Sabri Ünal <libreajans@gmail.com>\n"
 "Language-Team: Turkish <https://hosted.weblate.org/projects/graphs/graphs/tr/"
 ">\n"
 "Language: tr\n"
@@ -1585,535 +1585,3 @@ msgstr "“{}” uygulamanın yolu yok"
 #: src/utilities.py:185
 msgid "No valid number specified"
 msgstr "Geçerli bir sayı belirtilmedi"
-
-#~ msgid "linear"
-#~ msgstr "doğrusal"
-
-#~ msgid "logarithmic"
-#~ msgstr "logaritmik"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open Plot Settings"
-#~ msgstr "Çizim Ayarlarını Aç"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open new File"
-#~ msgstr "Yeni Dosya Aç"
-
-#~ msgid "Default Bottom Axis label"
-#~ msgstr "Öntanımlı Alt Eksen Etiketi"
-
-#~ msgid "Default Left Axis Label"
-#~ msgstr "Öntanımlı Sol Eksen Etiketi"
-
-#~ msgid "Default Top Axis Label"
-#~ msgstr "Öntanımlı Üst Eksen Etiketi"
-
-#~ msgid "Default Right Axis Label"
-#~ msgstr "Öntanımlı Sağ Eksen Etiketi"
-
-#~ msgid "Axes"
-#~ msgstr "Eksenler"
-
-#~ msgid "Default Bottom Axis Scale"
-#~ msgstr "Öntanımlı Alt Eksen Ölçeği"
-
-#~ msgid "Default Left Axis Scale"
-#~ msgstr "Öntanımlı Sol Eksen Ölçeği"
-
-#~ msgid "Default Top Axis Scale"
-#~ msgstr "Öntanımlı Üst Eksen Ölçeği"
-
-#~ msgid "Default Right Axis Scale"
-#~ msgstr "Öntanımlı Sağ Eksen Ölçeği"
-
-#~ msgid "left"
-#~ msgstr "sol"
-
-#~ msgid "Styling"
-#~ msgstr "Biçem"
-
-#~ msgid "Use a legend by default"
-#~ msgstr "Öntanımlı olarak gösterge kullan"
-
-#~ msgid "Custom Style by Default"
-#~ msgstr "Öntanımlı Özel Biçem"
-
-#~ msgid "Reset to default styles"
-#~ msgstr "Öntanımlı biçemlere sıfırla"
-
-#~ msgid "Mathematical Operations"
-#~ msgstr "Matematiksel İşlemler"
-
-#~ msgid "Translate and Multiply"
-#~ msgstr "Çevir ve Çoğalt"
-
-#~ msgid "Add Data from Equation…"
-#~ msgstr "Denklemden Veri Ekle…"
-
-#~ msgid ""
-#~ "Graphs lets you customize the style of plotted data. You can add and edit "
-#~ "stylesheets in detail."
-#~ msgstr ""
-#~ "Grafikler, çizilen verilerin biçemini özelleştirmenize olanak sağlar. "
-#~ "Biçem sayfalarını ayrıntılı şekilde ekleyip düzenleyebilirsiniz."
-
-#~ msgid "New in Graphs:"
-#~ msgstr "Graphs'da Neler Yeni:"
-
-#~ msgid "Removed PIP mode"
-#~ msgstr "PIP kipi kaldırıldı"
-
-#~ msgid "Imported Data"
-#~ msgstr "İçe Aktarılan Veri"
-
-#~ msgid "Are you sure you want to reset to the default styles?"
-#~ msgstr "Öntanımlı biçimlere sıfırlamak istediğinize emin misiniz?"
-
-#, python-brace-format
-#~ msgid "{name} (copy)"
-#~ msgstr "{name} (kopya)"
-
-#~ msgid "Supports Numpy notation. Use a capital letter for the X coordinate."
-#~ msgstr "Numpy gösterimini destekler. X koordinatı için büyük harf kullanın."
-
-#~ msgid "The template style used for the new style"
-#~ msgstr "Yeni biçem için kullanılan şablon biçemi"
-
-#~ msgid "New Style Name"
-#~ msgstr "Yeni Biçem Adı"
-
-#~ msgid "Add New Style"
-#~ msgstr "Yeni Biçem Ekle"
-
-#~ msgid "Change the name of the data set and the axis positions"
-#~ msgstr "Veri kümesinin adını ve eksen konumlarını değiştir"
-
-#~ msgid "Change Name"
-#~ msgstr "Ad Değiştir"
-
-#~ msgid "The position of the X-axis"
-#~ msgstr "X ekseninin konumu"
-
-#~ msgid "The position of the Y-axis"
-#~ msgstr "X ekseninin konumu"
-
-#~ msgid "Line Style"
-#~ msgstr "Çizgi Biçemi"
-
-#~ msgid "Change properties of the lines"
-#~ msgstr "Çizgi özelliklerini değiştir"
-
-#~ msgid "The linestyle"
-#~ msgstr "Çizgi biçemi"
-
-#~ msgid "The width of lines"
-#~ msgstr "Çizgilerin genişliği"
-
-#~ msgid "The markers that are used"
-#~ msgstr "Kullanılan imleyiciler"
-
-#~ msgid "The size of the markers"
-#~ msgstr "İmleyicilerin boyutu"
-
-#~ msgid "In which file format should the graph be exported?"
-#~ msgstr "Grafik hangi dosya biçiminde dışa aktarılsın?"
-
-#~ msgid "Graph dpi"
-#~ msgstr "Grafik dpi"
-
-#~ msgid "Set the resolution of the graph in dots per inch "
-#~ msgstr "Grafiğin çözünürlüğünü (dpi) inç başına nokta cinsinden ayarlayın "
-
-#~ msgid "Export using a transparent background."
-#~ msgstr "Saydam arka plan kullanarak dışa aktar."
-
-#~ msgctxt "shortcut window"
-#~ msgid "Open new File (Advanced)"
-#~ msgstr "Yeni Dosya Aç (Gelişmiş)"
-
-#~ msgctxt "shortcut window"
-#~ msgid "Restore View"
-#~ msgstr "Görünümü Geri Yükle"
-
-#~ msgid "The character that is used as decimal separator"
-#~ msgstr "Ondalık ayraç olarak kullanılacak karakter"
-
-#~ msgid "Choose which column to load for the X-data"
-#~ msgstr "X verileri için hangi sütunun yükleneceğini seçin"
-
-#~ msgid "Choose which column to load for the Y-data"
-#~ msgstr "Y verileri için hangi sütunun yükleneceğini seçin"
-
-#~ msgid "Choose how many rows to skip while loading data"
-#~ msgstr "Veri yüklenirken kaç satırın atlanacağını seçin"
-
-#~ msgid "Confirm"
-#~ msgstr "Doğrula"
-
-#~ msgid "Pick a color"
-#~ msgstr "Renk seç"
-
-#~ msgid "Plot Settings"
-#~ msgstr "Çizim Ayarları"
-
-#~ msgid "Plot Labels"
-#~ msgstr "Çizim Etiketleri"
-
-#~ msgid "Settings for the plot title and labels"
-#~ msgstr "Çizim başlığı ve etiketleri için ayarlar"
-
-#~ msgid "Limits used on the axes"
-#~ msgstr "Eksenlerde kullanılan sınırlar"
-
-#~ msgid "No data"
-#~ msgstr "Veri yok"
-
-#~ msgid "The scaling used for each axis"
-#~ msgstr "Her eksen için kullanılacak ölçek"
-
-#~ msgid "Scaling on the bottom axis"
-#~ msgstr "Alt eksen için kullanılacak ölçek"
-
-#~ msgid "Scaling used for the left-hand axis"
-#~ msgstr "Sol eksen için kullanılacak ölçek"
-
-#~ msgid "Scaling used for the top axis"
-#~ msgstr "Üst eksen için kullanılacak ölçek"
-
-#~ msgid "Scaling used for the right-hand axis"
-#~ msgstr "Sağ eksen için kullanılacak ölçek"
-
-#~ msgid "Use a legend for the lines"
-#~ msgstr "Satırlar için gösterle kullan"
-
-#~ msgid "The position of the legend"
-#~ msgstr "Göstergenin konumu"
-
-#~ msgid "Custom Plot Style"
-#~ msgstr "Özel Çizim Biçemi"
-
-#~ msgid "Use a custom plot style instead of following the system style"
-#~ msgstr "Sistem biçemini takip etmek yerine özel çizim biçemi kullan"
-
-#~ msgid "Graph Style"
-#~ msgstr "Grafik Biçemi"
-
-#~ msgid "The style sheet used for the graph"
-#~ msgstr "Grafik için kullanılan biçem sayfası"
-
-#~ msgid "The font used in the graph"
-#~ msgstr "Grafikte kullanılan yazı tipi"
-
-#~ msgid "The linestyle used"
-#~ msgstr "Kullanılan çizgi biçemi"
-
-#~ msgid "Choose to have the ticks in the plot either in or out"
-#~ msgstr "Çizimdeki onay işaretlerinin içeride veya dışarıda olmasını seçin"
-
-#~ msgid "Show Minor Ticks"
-#~ msgstr "Küçük Onay İşaretleri Göster"
-
-#~ msgid "The thickness of the major ticks"
-#~ msgstr "Büyük onay işaretlerinin kalınlığı"
-
-#~ msgid "The thickness of the minor ticks"
-#~ msgstr "Küçük onay işaretlerinin kalınlığı"
-
-#~ msgid "The length of the major ticks"
-#~ msgstr "Büyük onay işaretlerinin uzunluğu"
-
-#~ msgid "The length of the minor ticks"
-#~ msgstr "Küçük onay işaretlerinin uzunluğu"
-
-#~ msgid "Show ticks on the bottom"
-#~ msgstr "Alt eksende onay işaretleri göster"
-
-#~ msgid "Show ticks on the left-hand axis"
-#~ msgstr "Sol eksende onay işaretleri göster"
-
-#~ msgid "Show ticks on the right"
-#~ msgstr "Sağ eksende onay işaretleri göster"
-
-#~ msgid "Show ticks on the top"
-#~ msgstr "Üstte onay işaretleri göster"
-
-#~ msgid "Settings for the grid that is used in the plots"
-#~ msgstr "Çizimlerde kullanılan ızgara ayarları"
-
-#~ msgid "Show Show Grid on the Graph"
-#~ msgstr "Grafikte Izgarayı Göster"
-
-#~ msgid "Width of the Lines in the Grid"
-#~ msgstr "Izgaradaki Çizgilerin Genişliği"
-
-#~ msgid "Grid Transparency"
-#~ msgstr "Izgara Saydamlığı"
-
-#~ msgid "The Transparency of the Grid"
-#~ msgstr "Izgara Saydamlığı"
-
-#~ msgid "The colors for different parts of the plot"
-#~ msgstr "Çizimin farklı bölümleri için renkler"
-
-#~ msgid "The color of the text in the plot"
-#~ msgstr "Çizimdeki metinlerin rengi"
-
-#~ msgid "The color of the ticks in the plot"
-#~ msgstr "Çizimdeki onay işaretlerinin rengi"
-
-#~ msgid "The color of the axes in the plot"
-#~ msgstr "Çizimdeki eksenlerin rengi"
-
-#~ msgid "The color of the grid in the plot"
-#~ msgstr "Çizimdeki ızgaranın rengi"
-
-#~ msgid "The color of the plot background"
-#~ msgstr "Çizgim arka planının rengi"
-
-#~ msgid "The color of the outline of the plot"
-#~ msgstr "Çizimin ana hat rengi"
-
-#~ msgid "Change the available line colors"
-#~ msgstr "Kullanılabilir çizgi renklerini değiştir"
-
-#~ msgid "The thickness of the axes"
-#~ msgstr "Eksenlerin kalınlığı"
-
-#~ msgid "The colors which will be used for the lines"
-#~ msgstr "Çizgiler için kullanılacak renkler"
-
-#~ msgid "Settings for importing graphs"
-#~ msgstr "Grafik içe aktarma ayarları"
-
-#~ msgid "Delimiter"
-#~ msgstr "Ayraç"
-
-#~ msgid "Which column to load for the X-data"
-#~ msgstr "X verileri için hangi sütunun yükleneceği"
-
-#~ msgid "Which column to load for the Y-data"
-#~ msgstr "Y verileri için hangi sütunun yükleneceği"
-
-#~ msgid "How many rows to skip while loading data"
-#~ msgstr "Veri yüklenirken kaç satırın atlanacağı"
-
-#~ msgid "Settings for the \"Add Equation\" option"
-#~ msgstr "\"Denklem Ekle\" seçeneği ayarları"
-
-#~ msgid "Default Equation: Y ="
-#~ msgstr "Öntanımlı Denklem: Y ="
-
-#~ msgid "Default X start"
-#~ msgstr "Öntanımlı X başlangıcı"
-
-#~ msgid "Default X stop"
-#~ msgstr "Öntanımlı X bitişi"
-
-#~ msgid "Default Step Size"
-#~ msgstr "Öntanımlı Basamak Boyutu"
-
-#~ msgid "Export Options"
-#~ msgstr "Dışa Aktarma Seçenekleri"
-
-#~ msgid "Options for exporting the graph"
-#~ msgstr "Grafik dışa aktarma seçenekleri"
-
-#~ msgid "Default Filetype"
-#~ msgstr "Öntanımlı Dosya Türü"
-
-#~ msgid "The default filetype of saved graphs"
-#~ msgstr "Kaydedilen grafiklerin öntanımlı dosya türü"
-
-#~ msgid "Default dpi"
-#~ msgstr "Öntanımlı dpi"
-
-#~ msgid "The default resolution of saved graphs in dots per inch"
-#~ msgstr ""
-#~ "Kaydedilen grafiklerin öntanımlı çözünürlüğü, (dpi) inç başına nokta "
-#~ "cinsinden"
-
-#~ msgid "Use a transparent background for the saved plots by default"
-#~ msgstr "Kaydedilen çizimler için öntanımlı olarak şeffaf arka plan kullan"
-
-#~ msgid "Behaviour of specific actions"
-#~ msgstr "Belirli işlemlerin davranışı"
-
-#~ msgid "The behaviour of the center data button"
-#~ msgstr "Ortala veri düğmesinin davranışı"
-
-#~ msgid "Other general settings"
-#~ msgstr "Diğer genel ayarlar"
-
-#~ msgid "Clipboard length"
-#~ msgstr "Pano uzunluğu"
-
-#~ msgid "Choose how many states are stored in the clipboard"
-#~ msgstr "Panoda kaç durumun saklanacağını seçin"
-
-#~ msgid "Choose how to handle duplicate entries to be loaded"
-#~ msgstr "Yüklenecek ikiz girdilerin nasıl işleneceğini seçin"
-
-#~ msgid "Whether to hide items, that aren't selected"
-#~ msgstr "Seçilmemiş ögelerin gizlenme durumu"
-
-#~ msgid "Plot"
-#~ msgstr "Çizim"
-
-#~ msgid "Set the labels and title that are used by default"
-#~ msgstr "Öntanımlı olarak kullanılan etiketleri ve başlığı ayarlayın"
-
-#~ msgid "Axes settings"
-#~ msgstr "Eksen ayarları"
-
-#~ msgid "Set the default axes scale and position used upon launch"
-#~ msgstr ""
-#~ "Başlatma sırasında kullanılan öntanımlı eksen ölçeğini ve konumunu "
-#~ "ayarlayın"
-
-#~ msgid "The scaling on the bottom axis"
-#~ msgstr "Alt eksende ölçekleme"
-
-#~ msgid "The scaling on the left-hand axis"
-#~ msgstr "Sol eksende ölçekleme"
-
-#~ msgid "The scaling on the top axis"
-#~ msgstr "Üst eksende ölçekleme"
-
-#~ msgid "The scaling on the right-hand axis"
-#~ msgstr "Sağ eksende ölçekleme"
-
-#~ msgid "The default position of the Y-axis"
-#~ msgstr "Y ekseninin öntanımlı konumu"
-
-#~ msgid "Change default plot style and other visual changes"
-#~ msgstr "Öntanımlı çizim biçemini ve diğer görsel değişiklikleri değiştirin"
-
-#~ msgid "The default position of the legend"
-#~ msgstr "Göstergenin öntanımlı konumu"
-
-#~ msgid ""
-#~ "Use a custom plot style instead of following the system style by default"
-#~ msgstr ""
-#~ "Öntanımlı olarak sistem biçemini takip etmek yerine özel çizim biçemi "
-#~ "kullan"
-
-#~ msgid "The custom style sheet used by default"
-#~ msgstr "Öntanımlı olarak kullanılan özel biçem sayfası"
-
-#~ msgid "Override the active line styling when switching plot style"
-#~ msgstr "Çizim biçemini değiştirirken etkin çizgi biçemini geçersiz kıl"
-
-#~ msgid "Rename"
-#~ msgstr "Yeniden Adlandır"
-
-#~ msgid ""
-#~ "The transformation tool uses Numpy notation, with capital letters for the "
-#~ "coordinates.\n"
-#~ "Transformations are done piece-wise, if you want access to the entire "
-#~ "range use X_range or Y_range. \n"
-#~ " e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.\n"
-#~ "\n"
-#~ "To convert a value from degrees into radians use radians(value), e.g. Y = "
-#~ "sin(radians(X))."
-#~ msgstr ""
-#~ "Dönüşüm aracı Numpy gösterimini kullanır, koordinatlar için büyük harfler "
-#~ "kullanılır.\n"
-#~ "Dönüşümler parça parça yapılır, tüm aralığa erişmek isterseniz X_range "
-#~ "veya Y_range kullanın.\n"
-#~ "Örneğin, Y = Y/max(X_range), her Y değerini Xʼin en büyük değeriyle "
-#~ "böler.\n"
-#~ "\n"
-#~ "Bir değeri dereceden radyana çevirmek için radians(değer) kullanın, "
-#~ "örneğin Y = sin(radians(X))."
-
-#~ msgid "Restore View / View Options"
-#~ msgstr "Görünümü Geri Yükle / Seçenekleri Görüntüle"
-
-#~ msgid ""
-#~ "Panning mode. Use left mouse button to pan, right mouse button to zoom. "
-#~ "Hold control to to keep aspect ratio fixed"
-#~ msgstr ""
-#~ "Kaydırma kipi. Kaydırmak için farenin sol düğmesini, yakınlaştırmak için "
-#~ "farenin sağ düğmesini kullanın. En boy oranını sabit tutmak için ctrl "
-#~ "tuşunu basılı tutun"
-
-#~ msgid "Center the data"
-#~ msgstr "Veriyi ortala"
-
-#~ msgid "Translate X-Axis"
-#~ msgstr "X Eksenini Çevir"
-
-#~ msgid "Translate Y-Axis"
-#~ msgstr "Y Ekseni Çevir"
-
-#~ msgid "Multiply X-Axis"
-#~ msgstr "X Eksenini Çoğalt"
-
-#~ msgid "Multiply Y-Axis"
-#~ msgstr "Y Eksenini Çoğalt"
-
-#~ msgid "Plot Styles"
-#~ msgstr "Çizim Biçemleri"
-
-#~ msgid "Add Data from File (Advanced)"
-#~ msgstr "Dosyadan Veri Ekle (Gelişmiş)"
-
-#~ msgid "Restore View"
-#~ msgstr "Görünümü Geri Yükle"
-
-#, python-brace-format
-#~ msgid "{error}: Unable to do translation, make sure to enter a valid number"
-#~ msgstr ""
-#~ "{error}: Çeviri yapılamadı, geçerli bir sayı girdiğinizden emin olun"
-
-#~ msgid "Could not open project"
-#~ msgstr "Proje açılamadı"
-
-#~ msgid "log"
-#~ msgstr "log"
-
-#~ msgid "none"
-#~ msgstr "hiçbiri"
-
-#~ msgid "out"
-#~ msgstr "çıktı"
-
-#~ msgid "Could not set limits, one of the values was probably infinite"
-#~ msgstr "Sınırlar ayarlanamadı, değerlerden biri muhtemelen sonsuzdu"
-
-#~ msgid "New configuration file created"
-#~ msgstr "Yeni yapılandırma dosyası uluşturuldu"
-
-#~ msgid "New Import Settings file created"
-#~ msgstr "Yeni İçe Aktarma Ayarları dosyası oluşturuldu"
-
-#~ msgid "Loading configuration file"
-#~ msgstr "Yapılandırma dosyası yükleniyor"
-
-#~ msgid "Rename Label"
-#~ msgstr "Etiketi Yeniden Adlandır"
-
-#~ msgid "Change Label"
-#~ msgstr "Etiket Değiştir"
-
-#~ msgid "Here you can change the label of the selected axis."
-#~ msgstr "Buradan seçilen eksenin etiketini değiştirebilirsiniz."
-
-#~ msgid "Rename Title"
-#~ msgstr "Başlığı Yeniden Adlandır"
-
-#~ msgid "Change Title"
-#~ msgstr "Başlığı Değiştir"
-
-#~ msgid "Here you can change the title of the plot."
-#~ msgstr "Buradan çizim başlığını değiştirebilirsiniz."
-
-#~ msgid "Open Data From File (Advanced)"
-#~ msgstr "Dosyadan Veri Aç (Gelişmiş)"
-
-#~ msgid "Name (Single File Only)"
-#~ msgstr "Ad (Sadece Tek Dosya)"
-
-#~ msgid "Open Files"
-#~ msgstr "Dosya Aç"
